# My_BOT

./: .gitignore  main.py  pyproject.toml
database/: sqlite_db.py  tables.py
service/: trello.py
